--- a/config-client.properties
+++ b/config-client.properties
@@ -1,1 +1,6 @@
-message="hello"
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/movieDB
+spring.datasource.username=root
+spring.datasource.password=
+server.port=8070
+spring.application.name=movie-services
